--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,10 +1,15 @@
 log.location="slp.log"
 log.level="DEBUG"
 
-server.root="C:/Program Files (x86)/Altitude/servers"
+server.root="C:/Program Files (x86)/Altitude/servers/"
 server.log="log.txt"
 server.command="command.txt"
 server.custom_json_commands="custom_json_commands.txt"
+
+lobby.map="lobby"
+
+27276.ladder.mode=tbd
+27277.ladder.mode=ball
 
 db.url="jdbc:postgresql://"
 db.user=""
